Add publication, add PhD thesis, update news list, and update .bib files

--- a/content/publication/case-cased-ope/cite.bib
+++ b/content/publication/case-cased-ope/cite.bib
@@ -1,8 +1,10 @@
 @inproceedings{matsson2022case,
   title={Case-Based Off-Policy Evaluation Using Prototype Learning},
   author={Matsson, Anton and Johansson, Fredrik D},
-  booktitle={Uncertainty in Artificial Intelligence},
+  booktitle={Proceedings of the 38th Conference on Uncertainty in Artificial Intelligence},
+  volume={180},
+  series={Proceedings of Machine Learning Research},
   pages={1339--1349},
   year={2022},
-  organization={PMLR}
+  publisher={PMLR}
 }
