--- a/content/publication/malearn/cite.bib
+++ b/content/publication/malearn/cite.bib
@@ -1,6 +1,9 @@
-@article{stempfle2025malearn,
+@inproceedings{stempfle2025malearn,
   title={Prediction Models That Learn to Avoid Missing Values},
   author={Stempfle, Lena and Matsson, Anton and Mwai, Newton and Johansson, Fredrik D},
-  journal={arXiv preprint arXiv:2505.03393},
-  year={2025}
+  booktitle={Proceedings of the 42nd International Conference on Machine Learning},
+  volume={267},
+  series={Proceedings of Machine Learning Research},
+  year={2025},
+  publisher={PMLR}
 }
