--- a/content/publication/inpole/cite.bib
+++ b/content/publication/inpole/cite.bib
@@ -1,8 +1,9 @@
 @inproceedings{matsson2024how,
   title={How Should We Represent History in Interpretable Models of Clinical Policies?},
   author={Matsson, Anton and Stempfle, Lena and Rao, Yaochen and Margolin, Zachary R. and Litman, Heather J. and Johansson, Fredrik D.},
-  booktitle={Proceedings of the 4rd Machine Learning for Health Symposium},
+  booktitle={Proceedings of the 4th Machine Learning for Health Symposium},
   volume={259},
+  series={Proceedings of Machine Learning Research},
   pages={713--733},
   year={2024},
   publisher={PMLR}
